logs/cron_20260313.log
[2026-03-13 02:00:01] Starting cron job: /home/admin/.openclaw/workspace/scripts/memory_maintenance.sh
[2026-03-13 02:00:01] Current directory: /home/admin/.openclaw/workspace
[2026-03-13 02:00:01] Python path: /usr/bin/python3
[2026-03-13 02:00:01] Python version: Python 3.6.8
[2026-03-13 02:00:01] Environment variables set
[Fri Mar 13 02:00:01 AM CST 2026] Starting memory maintenance...
Updated memory index with 11 files
[master 0093c71] Memory maintenance - 2026-03-13
 11 files changed, 300 insertions(+), 3 deletions(-)
 create mode 100644 distributed_search/search_buffer/ai_agent_20260312.json
 create mode 100644 distributed_search/search_buffer/intelligent_agent_20260312.json
 create mode 100644 distributed_search/search_buffer/large_model_20260312.json
 create mode 100644 distributed_search/search_buffer/prompt_20260312.json
 create mode 100644 logs/ai_agent_daily_20260312.log
 create mode 100644 logs/cron_20260313.log
 create mode 100644 memory/2026-03-12.md
 create mode 100644 messages/to_send/20260312_090002.json
error: src refspec main does not match any
error: failed to push some refs to 'https://github.com/GabrielOWO799/personal-assistant.git'
[Fri Mar 13 02:00:01 AM CST 2026] Memory maintenance completed!
[2026-03-13 02:00:01] Script completed with exit code: 0
[2026-03-13 02:00:01] Pending messages count: 7
[2026-03-13 02:00:01] WARNING: Found 7 pending messages that may need processing
[2026-03-13 02:00:01] SUCCESS: Cron job completed successfully
[2026-03-13 09:00:01] Starting cron job: /home/admin/.openclaw/workspace/scripts/ai_agent_daily.sh
[2026-03-13 09:00:01] Starting cron job: /home/admin/.openclaw/workspace/scripts/ai_toy_weekly.sh
[2026-03-13 09:00:01] Current directory: /home/admin/.openclaw/workspace
[2026-03-13 09:00:01] Current directory: /home/admin/.openclaw/workspace
[2026-03-13 09:00:01] Python path: /usr/bin/python3
[2026-03-13 09:00:01] Python path: /usr/bin/python3
[2026-03-13 09:00:01] Python version: Python 3.6.8
[2026-03-13 09:00:01] Python version: Python 3.6.8
[2026-03-13 09:00:01] Environment variables set
[2026-03-13 09:00:01] Environment variables set
正在生成AI+潮玩周报候选资讯（20条）...
搜索 kickstarter...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 indiegogo...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 theverge...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 techcrunch...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 toybook...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 itjuzi...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 36kr...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 mojing...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
AI+潮玩周报候选资讯（20条）已生成！
[2026-03-13 09:00:01] Script completed with exit code: 0
[2026-03-13 09:00:01] Pending messages count: 7
[2026-03-13 09:00:01] WARNING: Found 7 pending messages that may need processing
[2026-03-13 09:00:01] SUCCESS: Cron job completed successfully
[2026-03-13 09:00:02] Script completed with exit code: 0
[2026-03-13 09:00:02] Pending messages count: 7
[2026-03-13 09:00:02] WARNING: Found 7 pending messages that may need processing
[2026-03-13 09:00:02] SUCCESS: Cron job completed successfully
